\dotcup im gesamten Dokument verwendet.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3334 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -353,7 +353,7 @@
   Zahl. Dann bezeichnet man  $M$ genau dann als \highl[teilbar]{$m$"~teilbar}
   bezüglich $G$ oder sagt, $M$ hat eine
   $m$"~elementige disjunkte \highl[Pflasterung]{$G$"~Pflasterung}, 
-  wenn, $M$  disjunkte Zerlegungen $M=M_{1}\cup\dotsb\cup M_{m}$ hat, so
+  wenn, $M$  disjunkte Zerlegungen $M=M_{1}\dotcup\dotsb\dotcup M_{m}$ hat, so
   dass es für alle  $i\in\{1,\dotsc,m\}$ ein $\gamma_{i}\in G$ mit
   $M_{i}=\gamma_{i}(M_{1})$ gibt.
 \end{defini}
@@ -362,8 +362,8 @@
   \begin{itemize}
    \item Sei $R=\R$ und $G$ die Gruppe der Translationen, $m\geq2$
     \begin{enumerate}
-     \item $[0,1)$ translativ $m$"~teilbar: $[0,1)= [0,\nicefrac{1}{m})\cup
-      [\nicefrac{1}{m},\nicefrac{2}{m})\cup\dotsb\cup[\nicefrac{m-1}{m},
+     \item $[0,1)$ translativ $m$"~teilbar: $[0,1)= [0,\nicefrac{1}{m})\dotcup
+      [\nicefrac{1}{m},\nicefrac{2}{m})\dotcup\dotsb\dotcup[\nicefrac{m-1}{m},
       1)$
      \item $\R$ ist translativ $m$"~teilbar: $\R=\bigcup_{i=1}^{m} M_{i}$ mit
       $M_{i}= \bigcup_{k=-\infty}^{\infty} [k+\frac{i-1}{m}, k+\frac{i}{m})$
@@ -371,13 +371,13 @@
    \item Die Kreisscheibe der \textsc{euklid}ischen Ebene ist bezüglich der
     Isometrien der Ebene nicht $2$"~teilbar.
     \begin{proof}
-      Wir nehmen an, $B(0,1)=M_{1}\cup M_{2}= M_{1}\cup\gamma(M_{1})$. Sei
+      Wir nehmen an, $B(0,1)=M_{1}\dotcup M_{2}= M_{1}\dotcup\gamma(M_{1})$. Sei
       o.\,B.\,d.\,A. $0\in M_{1}\Rightarrow\gamma(0)\neq0$. Sonst wäre $0\in
       M_{1}\cap M_{2}$. Weiter ist $M_{2}= M_{2}\cap\gamma(M_{1})\subseteq
       B(0,1)\cap\gamma(B(0,1))= B(0,1)\cap B(\gamma(0),1)$. Also ist
       $M_{2}\subseteq B(x_{2}, r)$ mit $x_{2}= \frac{\gamma(0)}{2}$ und
       $r\leq1$. Dann ist $M_{1}= \gamma^{-1}(M_{2})\subseteq
-      B(x_{1},r)\Rightarrow B(0,1) =M_{1}\cup M_{2}\subseteq B(x_{1},r) \cap
+      B(x_{1},r)\Rightarrow B(0,1) =M_{1}\dotcup M_{2}\subseteq B(x_{1},r) \cap
       B(x_{2},r)$. Aber $B(0,1)$ liegt in einem Streifen der Breite $2r<2$.
       \lightning{}
     \end{proof}
@@ -501,19 +501,19 @@
     \begin{itemize}
      \item[aus \autoref{eq:s1.1}:] $\CO(x)\cap K= \{\phi^{k}(x),
       \phi^{k+1}(x),\phi^{k+2}(x)\dotsc\}= \{x_{0},
-	\phi(x_{0}), \phi^{2}(x_{0}),\dotsc\}= M_{1}(\CO(x))\cup
-	M_{2}(\CO(x))\cup\dotsb\cup M_{m}(\CO(x))$. Disjunkte Zerlegungen in
+	\phi(x_{0}), \phi^{2}(x_{0}),\dotsc\}= M_{1}(\CO(x))\dotcup
+	M_{2}(\CO(x))\dotcup\dotsb\dotcup M_{m}(\CO(x))$. Disjunkte Zerlegungen in
 	$M_{i}(\CO(x))= \{\phi^{i-1}(x_{0}), \phi^{m+i-1}(x_{0}),
 	\phi^{2m+i-1}(x_{0}),\dotsc\}$, wobei $M_{i}(\CO(x))= \phi^{i-1}(M_{1}(\CO(x)))$.
        \item $\CO(x)\cap K=\CO(x)$: Man fixiert ein $x_{0}\in \CO(x)$ nur abhängig
 	von $\CO(x)$ und unabhängig von $x$. Jetzt wird das Auswahlaxiom
 	benutzt, da man evtl. "`viele"' Orbits hat. Nun können wir schreiben
-	$\CO(x)\cap K= M_{1}(\CO(x))\cup\dotsb\cup M_{m}(\CO(x))$ disjunkte
+	$\CO(x)\cap K= M_{1}(\CO(x))\dotcup\dotsb\dotcup M_{m}(\CO(x))$ disjunkte
 	Zerlegungen in $M_{i}(\CO(x))= \Set{\phi^{km+i-1}(x_{0}) | k\in\Z}$.
 	Insbesondere hat man $M_{i}(\CO(x))= \phi^{i-1}(M_{1}(\CO(x)))$.
       \end{itemize}
     Fazit: $K=\bigcup_{x\in K}(\CO(x)\cap K)= \bigcup_{x\in K}
-    (M_{1}(\CO(x))\cup\dotsb\cup M_{m}(\CO(x)))= M_{1}\cup\dotsb\cup M_{m}$
+    (M_{1}(\CO(x))\dotcup\dotsb\dotcup M_{m}(\CO(x)))= M_{1}\dotcup\dotsb\dotcup M_{m}$
     disjunkte Zerlegungen mit $M_{i}=\bigcup_{x\in K} M_{i}(\CO(x))$, wobei
     $M_{i}= \phi^{i-1}(M_{1})$.\todo{Beweis muss weiter überarbeitet werden.}
   \end{proof}
@@ -679,7 +679,7 @@
     \begin{itemize}
      \item[(i)$\Rightarrow$(ii)] Wir nehmen an, dass die erste Aussage gilt,
       aber $K$ keine Halbgerade enthält. Ausführlicher heißt das, dass $K$ ohne
-      Halbgerade gegeben ist und sich $K=M_{1}\cup\dotsb\cup M_{m}$ mit
+      Halbgerade gegeben ist und sich $K=M_{1}\dotcup\dotsb\dotcup M_{m}$ mit
       $M_{i}=M_{1}+t_{i}$ für $i=1,\dotsc,m$ disjunkt zerlegen lässt. Die $t_{i}\in X$ sind
       Translationsvektoren und $t_{1}=0$. Weiterhin nehmen wir o.\,B.\,d.\,A.
       an, $0\in M_{1}\subseteq K$. Falls das nicht der Fall wäre, machen wir
@@ -690,7 +690,7 @@
       abgeschlossen oder offen (da die Dimension von $\overline{X}$ kleiner
       als $\infty$ war), hat keine Halbgerade, $\overline{K}\neq\emptyset$, da
       $0\in\overline{K}$ und $\overline{K}=
-      \overline{M_{1}}\cup\dotsb\cup\overline{M_{m}}$ (Zerlegung) mit
+      \overline{M_{1}}\dotcup\dotsb\dotcup\overline{M_{m}}$ (Zerlegung) mit
       $\overline{M_{i}}= M_{i}\cap \overline{X}$ und $\overline{M_{i}}=
       M_{i}\cap\overline{X}= (M_{1}+t_{i})\cap\overline{X}= (M_{1}+t_{i})\cap
       (\overline{X}\cap t_{i})= (M_{1}\cap\overline{X})+t_{i}=
@@ -814,7 +814,7 @@
 	\lambda\in\R)}$ durch $x_{0}$ und parallel zu $L$. Da $f(t_{i_{1}})=
 	f(t_{i_{2}})=c$ ist, folgt $f(g)=f(x_{0})$. Nun betrachten wir die
 	disjunkte Vereinigung
-	$\overline{K}= K\cap g= (M_{1}\cap g)\cup\dotsb\cup(M_{m}\cap
+	$\overline{K}= K\cap g= (M_{1}\cap g)\dotcup\dotsb\dotcup(M_{m}\cap
 	g)$.
 
 	Sei nun $i\in I\setminus J$. Dann ist $\sup f(M_{i})<f(x_{0})$. Da
@@ -876,7 +876,7 @@
      \item $K=[0,1)\subseteq\R$ ist $m$"~teilbar, aber ohne Halbgerade.
      \item $K=(\R\times[-1,0))\cup\{(0,0)\}\subseteq\R^{2}$ enthält eine
       Halbgerade, ist aber nicht $2$"~teilbar. Denn nehmen wir an, dass
-      $K=M_{1}\cup M_{2}= M_{1}\cup(M_{1}+t_{2})$ disjunkte Zerlegung. Sei
+      $K=M_{1}\dotcup M_{2}= M_{1}\dotcup(M_{1}+t_{2})$ disjunkte Zerlegung. Sei
       o.\,B.\,d.\,A. $(0,0)\in M_{1}$. Damit ist $t_{2}=(0,0)+ t_{2}\in
       M_{2}\subseteq K\setminus\{(0,0)\}$. Dann wäre $\overline{K}\coloneqq
       K\cap\Set{(0,0)+\lambda t_{2} | \lambda\in\R}$ auch $2$"~teilbar. Das
@@ -1245,7 +1245,7 @@
   und $\bd(B(0,1))\subseteq\cl(M)$. Dann ist $M$ nicht isometrisch $m$"~teilbar.
   \begin{proof}
     Wir nehmen an, dass $M$ doch $m$"~teilbar ist. Damit können wir $M$ als
-    $M=M_{1}\cup\dotsb\cup M_{m}$ disjunkte Zerlegung schreiben. Dabei ist
+    $M=M_{1}\dotcup\dotsb\dotcup M_{m}$ disjunkte Zerlegung schreiben. Dabei ist
     $M_{i}= \phi_{i}(M_{1})$ mit $\phi_{i}$ aus der Isometriegruppe. Sei
     o.\,B.\,d.\,A. $0\in M_{1}$. Dann ist:
     \begin{gather}
@@ -1253,12 +1253,13 @@
 	 \phi_{2}(0),\dotsc,\phi_{m}(0)\neq0
     \end{gather}
     und
-    \begin{gather}
+    \begin{align}
       \label{eq:6}
-	 \bd(B(0,1))\subseteq\cl(M)=
-	 \cl(M_{1})\cup\dotsb\cup\cl(M_{m})\subseteq \cl(M_{1})\cup
+	 \bd(B(0,1))\subseteq\cl(M) &=
+	 \cl(M_{1})\cup\dotsb\cup\cl(M_{m})\\
+      &\subseteq \cl(M_{1})\cup
 	 B(\phi_{2}(0), 1)\cup\dotsb\cup B(\phi_{m}(0),1)
-    \end{gather}
+    \end{align}
     Die letzte Beziehung sieht man durch: $\cl(M_{i})=
     \cl(\phi_{i}(M_{1}))\subseteq \phi_{i}(B(0,1))= B(\phi_{i}(0),1)$.
 
