--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1997,7 +1997,7 @@ Sei $R$ ein Ring.
 \end{satz}
 
 %satz 6.7
-\begin{satz}[Satz von Wedderburn]
+\begin{satz}[Satz von Wedderburn]\label{satz:6.7}
   Genau dann ist der Ring $R$ halbeinfach, wenn Zahlen $l\in\N_{0}$,
   $d_{1},\dotsc, d_{l}\in\N$ und Schiefkörper $D_{1},\dotsc, D_{l}$ existieren
   mit $R\cong D_{1}^{d_{1}\times d_{1}}\times\dotso D_{l}^{d_{l}\times
@@ -2206,6 +2206,178 @@ Sei $R$ ein Ring.
 \end{bemerk}
 
 \todo[inline]{Fehlende Vorlesungen einbauen}
+
+%Vorlesung vom 20.5.2011
+%vorher satz 8.9
+\begin{bemerk}
+  Ist $M$ artinsch und noethersch, so hat $M$ nach Satz 8.6\todo{Link
+  einbauen} und Satz 8.9\todo{Link einbauen} eine im wesentlichen eindeutige
+  Zerlegung $M=M_{1}\oplus\dotso \oplus M_{n}$ in endlich viele unzerlegbare
+  Untermoduln $M_{1},\dotsc, M_{n}$. Ist $M$ nur artinsch, dann ist die
+  Zerlegung nicht unbedingt eindeutig. 
+\end{bemerk}
+
+\begin{bsp}
+  Eindeutigkeit der Jordanschen Normalform: Dabei ist $M=V$ ein
+  endlich"=dimensionaler Vektorraum über einem Körper~$K$, $R=K[X]$ ist der
+  Polynomring und $f\in\End_{R}(V)$. Dann ist $V$ ein $R$"~Modul durch
+  $\phi\circ v\coloneqq(\phi(f))(v)$ für $\phi\in K[X]$ und $v\in V$.
+\end{bsp}
+
+%chap 9
+\chapter{Freie und projektive Moduln}
+
+Sei $R$ ein Ring.
+%def 9.1
+\begin{defini}
+  Sei $R\in\vorunten{R}\kat{Mod}$ und $X\subseteq M$ eine Teilmenge. Dann
+  heißt $X$ \highl{linear unabhängig} (über $R$), falls gilt: Ist
+  $(r_{x})_{x\in X}\in\coprod_{x\in X} R$ und $\sum_{x\in X} r_{x}x=0$, so ist
+  $r_{x}=0$ für alle $x\in X$. Sonst heißt die Teilmenge \highl{linear
+  abhängig}.
+\end{defini}
+
+\begin{bemerk}
+  \begin{itemize}
+   \item Ist $X$ linear unabhängig, so auch jede Teilmenge von $X$.
+    Stets ist $\emptyset$ linear unabhängig.
+   \item Ist jede endliche Teilmenge von $X$ linear unabhängig, so auch $X$
+    selbst.
+   \item Ist $R\neq0$, so ist $\{0\}$ linear abhängig.
+   \item Für jede endliche abelsche Gruppe~$(A,+)$ und jedes Element $a\in A$
+    ist $\abs{A}a=0$ nach dem Satz von \textsc{Fermat}. Daher ist $\emptyset$
+    die einzige linear unabhängige Teilmenge von $A$ als $\Z$"~Modul.
+  \end{itemize}
+\end{bemerk}
+
+%def 9.2
+\begin{defini}
+  Sei $M\in\vorunten{R}\kat{Mod}$. Ein linear unabhängiges Erzeugendensystem
+  von $M$ heißt \highl{Basis} von $M$ (über $R$). Hat $M$ eine Basis, so heißt
+  $M$ \highl[Modul!freier]{frei}\index{frei}.
+\end{defini}
+
+\begin{bsp}
+  \begin{enumerate}[(a)]
+   \item Der Nullmodul ist frei mit Basis $\emptyset$.
+   \item Für $n\in\N$ bilden die
+    $e_{1}\coloneqq(1,0,\dotsc,0),\dotsc,e_{n}\coloneqq(0,\dotsc,0,1)$ eine
+    Basis in $\R^{n}$. Allgemeiner ist für jede Menge $I\neq\emptyset$ die
+    Menge $\Set{e_{i} | i\in I}$ eine Basis von $\coprod_{i\in I} R$. Die wird
+    als \highl{Standardbasis} oder \highl[Basis!kanonische]{kanonische Basis}
+    bezeichnet. Dabei $e_{i}(j)\coloneqq\delta_{ij}$ für $i,j\in I$.
+   \item Eine endliche abelsche Gruppe $A\neq0$ ist nicht frei als $\Z$"~Modul.
+   \item Ist $R$ ein Schiefkörper, so ist $R$ halbeinfach nach dem Satz von
+    \textsc{Wedderburn} (\autoref{satz:6.7}). Daher ist jeder $R$"~Modul eine
+    direkte Summe einfacher $R$"~Moduln und jeder einfache $R$"~Modul ist zu
+    $R$ isomorph. Daher ist jeder $R$"~Modul frei.
+  \end{enumerate}
+\end{bsp}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Ist $M\in\vorunten{R}\kat{Mod}$ frei mit Basis~$B$, so ist
+    $\coprod_{b\in B} R\rightarrow M$ mti $(r_{b})_{b\in B}\mapsto\sum_{b\in
+    B} r_{b}b$ ein $R$"~Isomorphismus.
+   \item Jede Basis eines endlich erzeugten freien $R$"~Moduls ist wieder
+    endlich.
+   \item Freie Moduln können Basen verschiedener Länge haben. Dies gilt nicht
+    für kommutative Ringe und Schiefkörper (wegen des Satz von
+    \textsc{Krull}"~\textsc{Schmidt})
+   \item Jeder endlich erzeugte $R$"~Modul ist zu einem Faktormodul eines
+    endlich erzeugten freien $R$"~Moduls isomorph.
+  \end{enumerate}
+\end{bemerk}
+
+%def 9.3
+\begin{defini}
+  Eine Folge $L\xrightarrow{f} M\xrightarrow{g}N$ in $\vorunten{R}\kat{Mod}$
+  mit $\Bld(f)=\ker(g)$ heißt \highl{exakt}. Eine (endliche oder unendliche)
+  Folge $\dotso \rightarrow M_{n+1}\xrightarrow{f_{n+1}}M_{n}
+  \xrightarrow{f_{n}} m_{n-1}\rightarrow\dotso$ in $\vorunten{R}\kat{Mod}$
+  heißt \highl{exakt}, wenn jede Teilfolge $M_{n+1}\xrightarrow{f_{n+1}}
+  M_{n}\xrightarrow{f_{n}} M_{n-1}$ exakt ist. Eine exakte Folge
+  $0\rightarrow L\xrightarrow{f} M\xrightarrow{g}N\rightarrow0$ in
+  $\vorunten{R}\kat{Mod}$ heißt \highl[Folge!kurze exakte]{kurze exakte Folge}
+  oder \highl{Sequenz}. 
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $0\rightarrow L\xrightarrow{f}M$ ist genau dann exakt, wenn
+    $\ker(f)=\{0\}$, also genau dann, wenn $f$ injektiv ist.
+   \item $M\xrightarrow{g}N\rightarrow 0$ ist genau dann exakt, wenn
+    $\Bld(g)=N$ ist, also genau dann, wenn $g$ surjektiv ist.
+   \item $0\rightarrow M\xrightarrow{g} N\rightarrow0$ ist genau dann exakt,
+    wenn $g$ bijektiv ist.
+   \item $0\rightarrow L\xrightarrow{f} M\xrightarrow{g}N\rightarrow0$ ist
+    genau dann exakt, wenn $f$ injektiv, $g$ surjektiv und $\Bld(f)= \ker(g)$
+    ist Gegebenenfalls gilt nach dem Homomorphiesatz (\autoref{satz:4.1}):
+    $L\simeq\Bld(f)$ und $N\simeq M/\ker(g)=M/\Bld(f)$.
+  \end{enumerate}
+\end{bemerk}
+
+%satz 9.4
+\begin{satz}
+  Für eine kurze exakte Sequenz $0\rightarrow L\xrightarrow{f}
+  M\xrightarrow{g} N\rightarrow0$ in $\vorunten{R}\kat{Mod}$ sind äquivalent:
+  \begin{enumerate}[(1)]
+   \item $\exists g'\in\Hom_{R}(N,M)\colon g\circ g'=\id_{N}$.
+   \item $\exists f'\in\Hom_{R}(M,L)\colon f'\circ f=\id_{L}$.
+   \item $\exists$ Untermodul $U\subseteq M\colon M=\Bld(f)\oplus U$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(1)$\Rightarrow$(3)] Sei (1) erfüllt. Für $m\in M$ ist
+      $g(m-g'(g(m)))= g(m)-g(g'(g(m)))= g(m)-g(m)=0$, d.\,h.
+      $m-g'(g(m))\in\ker(g)$ und $m=(m-g'(g(m)))+g'(g(m))\in\ker(g)+\Bld(g')$.
+      Daher $M=\ker(g)+\Bld(g')$. Ist $x\in\ker(g)\cap\Bld(g')$ und $y\in N$
+      mit $x=g'(y)$, so ist $0=g(x)= g(g'(x))= y$, also auch $x=g'(y)=0$.
+      Somit ist $M=\ker(g)\oplus\Bld(g')$.
+     \item[(3)$\Rightarrow$(1)] Sei (3) erfüllt und $h\coloneqq
+      g|U$\todo{Einschränkung}. Wegen $M=\ker(g)\oplus U$ ist $h$ bijektiv.
+      Daher ist $g'\colon N\rightarrow M$ mit $n\mapsto h^{-1}(n)$ 
+      $R$"~linear und $g(g'(n))= h(h^{-1}(n))=n$ für alle $n\in N$, d.\,h.
+      $g\circ g'=\id_{N}$.
+     \item[(2)$\Leftrightarrow$(3)] erfolgt analog.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Gegebenenfalls sagt man, die kurze exakte Sequenz \emph{zerfällt}
+  (\highl{split}). Nach dem Beweis gilt dann: $M=\Bld(f)\oplus\ker(f')=
+  \ker(g)\oplus\Bld(g')$.
+\end{bemerk}
+
+\begin{bsp}
+  Für $M_{1},M_{2}\in\vorunten{R}\kat{Mod}$ zerfällt die kurze exakte Sequenz
+  $0\rightarrow M_{1}\xrightarrow{q_{1}} M_{1}\times
+  M_{2}\xrightarrow{p_{2}}\rightarrow0$. Dabei sind $q_{1},q_{2}$ und
+  $p_{1},p_{2}$ die entsprechenden Injektoren bzw. Projektoren.
+\end{bsp}
+
+%satz 9.5
+\begin{satz}\label{satz:9.5}
+  Für $P\in\vorunten{R}\kat{Mod}$ sind äquivalent:
+  \begin{enumerate}[(1)]
+   \item $P ist zu einem direkten Summanden eines freien $R$-Moduls isomorph$.
+    \missingfigure{komm. Diagramm}
+   \item Zu jedem $R$"~Epimorphismus $f\colon M\rightarrow N$ und jedem
+    $g\in\Hom_{R}(P,N)$ existiert ein $h\in\Hom_{R}(P,M)$ mit $g=f\circ h$.
+   \item Jede kurze exakte Sequenz der Form:
+    \begin{gather}
+      \label{eq:9.5}
+	 0\rightarrow L\xrightarrow{f} M\xrightarrow{g}P\rightarrow0
+    \end{gather}
+    in $\vorunten{R}\kat{Mod}$ zerfällt.
+  \end{enumerate}
+\end{satz}
+
+\begin{defini}
+  Gegebenenfalls heißt das $P$ aus \autoref{satz:9.5}
+  \highl[Modul!projektives]{projektiv}\index{projektiv}.
+\end{defini}
 
 \clearpage
 \appendix
