--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2277,7 +2277,7 @@ Sei $R$ ein Ring.
 \begin{bemerk}
   \begin{enumerate}
    \item Ist $M\in\vorunten{R}\kat{Mod}$ frei mit Basis~$B$, so ist
-    $\coprod_{b\in B} R\rightarrow M$ mti $(r_{b})_{b\in B}\mapsto\sum_{b\in
+    $\coprod_{b\in B} R\rightarrow M$ mit $(r_{b})_{b\in B}\mapsto\sum_{b\in
     B} r_{b}b$ ein $R$"~Isomorphismus.
    \item Jede Basis eines endlich erzeugten freien $R$"~Moduls ist wieder
     endlich.
@@ -2361,8 +2361,19 @@ Sei $R$ ein Ring.
 \begin{satz}\label{satz:9.5}
   Für $P\in\vorunten{R}\kat{Mod}$ sind äquivalent:
   \begin{enumerate}[(1)]
-   \item $P ist zu einem direkten Summanden eines freien $R$-Moduls isomorph$.
-    \missingfigure{komm. Diagramm}
+   \item $P$ ist zu einem direkten Summanden eines freien $R$-Moduls isomorph.
+
+    \begin{tikzpicture}
+      \node (p) {$P$};
+      \node [below=1.5cm of p] (n) {$N$};
+      \node [left=2cm of n] (m) {$M$};
+      \node [right=2cm of n] (null) {$0$};
+      \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
+      \draw[->]
+      (p) edge node (g) [right]{$g$} (n)
+      (m) edge node (f) [above]{$f$} (n)
+      (n) edge node (nien) {} (null);
+    \end{tikzpicture}
    \item Zu jedem $R$"~Epimorphismus $f\colon M\rightarrow N$ und jedem
     $g\in\Hom_{R}(P,N)$ existiert ein $h\in\Hom_{R}(P,M)$ mit $g=f\circ h$.
    \item Jede kurze exakte Sequenz der Form:
