Fehlenden Link eingebaut und neues TODO: φ oder φ-Strich?
git-svn-id: https://svn.lug-jena.de/uni-skripte@3357 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -329,7 +329,7 @@
   \end{gather*}
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerk}\label{bem:1}
   \begin{enumerate}
    \item Die Abbildung $\phi$ ist genau dann affin, wenn für alle $m\geq2$,
     $x_{1},\dotsc, x_{m}\in M$ und für alle
@@ -1027,9 +1027,10 @@
   \begin{proof}
     $\overline{\phi}\colon X\rightarrow Y$ mit
     $\overline{\phi}\coloneqq\phi(x)-\phi(0)$. Hier folgt,
-    $\overline{\phi}(0)=0$, $\overline{\phi}$ ist eine Isometrie im Sinne von
-    \autoref{eq:1}. Es genügt zu zeigen\todo{Nach einer Bemerkung oben in
-    1.2}, dass $\overline{\phi}$ eine $\R$"~lineare Abbildung ist.
+    $\overline{\phi}(0)=0$ und $\overline{\phi}$ ist eine Isometrie im Sinne von
+    \autoref{eq:1}. Nach dem dritten Punkt der \autoref{bem:1} genügt es zu
+    zeigen, dass $\phi$\todo{Hier stand vorher $\overline{\phi}$. Ist die
+    Version korrekt?} eine $\R$"~lineare Abbildung ist.
 
     \begin{enumerate}[(1)]
      \item $\forall x_{1},x_{2}\in
