--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -291,11 +291,23 @@ dienen hier nur der Auffrischung.
   \highl[Gruppe!kommutative]{kommutativ}\index{kommutativ}.
 \end{defini}
 
+\begin{defini}[Transformationsgruppe]
+  \todo[inline]{Definition einbauen}
+\end{defini}
+
 \begin{defini}[Körper]
   Sei $(K,+,\cdot)$ eine Menge mit zwei assoziativen Verknüpfungen. Dann ist
   $K$ genau dann ein \highl{Körper}, wenn $K$ mit der Verknüpfung~$+$ eine
   kommutative Gruppe und $K$ mit der Verknüpfung~$\cdot$ eine Gruppe ist sowie
   wenn die Distributivität $a\cdot(b+c)=ab+ac$ für alle $a,b,c\in K$ gilt.
+\end{defini}
+
+\begin{defini}[Vektorraum]
+  \todo[inline]{Definition einbauen}  
+\end{defini}
+
+\begin{defini}[Lineare Abbildung]
+  \todo[inline]{Definition einbauen}  
 \end{defini}
 
 
