\overline{\phi} ist korrekt. TODO entfernt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3360 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1070,8 +1070,7 @@ dienen hier nur der Auffrischung.
     $\overline{\phi}\coloneqq\phi(x)-\phi(0)$. Hier folgt,
     $\overline{\phi}(0)=0$ und $\overline{\phi}$ ist eine Isometrie im Sinne von
     \autoref{eq:1}. Nach dem dritten Punkt der \autoref{bem:1} genügt es zu
-    zeigen, dass $\phi$\todo{Hier stand vorher $\overline{\phi}$. Ist die
-    Version korrekt?} eine $\R$"~lineare Abbildung ist.
+    zeigen, dass $\overline{\phi}$ eine $\R$"~lineare Abbildung ist.
 
     \begin{enumerate}[(1)]
      \item $\forall x_{1},x_{2}\in
