--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -149,6 +149,7 @@
 
 \newcommand*{\CH}{\mathcal{H}}
 \newcommand*{\CK}{\mathcal{K}}
+\newcommand*{\CN}{\mathcal{N}}
 \newcommand*{\CO}{\mathcal{O}}      % Cal-O
 \newcommand*{\CS}{\mathcal{S}}
 \newcommand*{\CT}{\mathcal{T}}
@@ -2818,7 +2819,7 @@ Dies geht auf \cite{groot56} zurück.
 \end{satz}
 
 %satz 6
-\begin{satz}
+\begin{satz}\label{satz:2.6}
   Sei $k\in\{2,3,4,\dotsc\}$.
   \begin{enumerate}[a)]
    \item Es gilt, $B(0,1)\stackrel{*}{\simeq} k\cdot B(0,1)$ mit $\deg(B(0,1),
@@ -2947,7 +2948,7 @@ Dies geht auf \cite{groot56} zurück.
 \end{bsp}
 
 %hs3
-\begin{satz}
+\begin{satz}\label{satz:hs2.3}
   Seien $a=A_{1}+\dotsb+ A_{k}$ und $b=B_{1}+\dotsb+ B_{l}$ aus
   $\langle2^{\R^{3}}\rangle$ sowie $n\in\N$. Besitzt $A_{1}$ paarweise
   disjunkte Teilmengen $M_{1},\dotsc, M_{n}$ und gibt es eine Darstellung
@@ -2969,11 +2970,221 @@ Dies geht auf \cite{groot56} zurück.
 \end{satz}
 
 %satz 7
-\begin{satz}[Banach"=Schröder"=Bernstein"=Theorem]
+\begin{satz}[Banach"=Schröder"=Bernstein"=Theorem]\label{satz:2.7}
   Gelten für zwei Wörter $a,b\in\langle2^{\R^{3}}\rangle$ die Relationen
   $a\stackrel{n}{\leq}b$ und $b\stackrel{n}{\leq}a$, so folgt,
   $a\stackrel{n+m}{\simeq}b$.
+  %Vorlesung vom 10.6.2011
+  \begin{proof}
+    Wir betrachten nur den Fall, dass $a=A$ und $b=B$, d.\,h. aus
+    $A\stackrel{n}{\leq}B$ und $B\stackrel{m}{\leq}A$ folgt,
+    $A\stackrel{n+m}{\simeq}B$.
+
+    Die Aussage $A\stackrel{n}{\leq}B$ heißt, dass ein $B'\subseteq B$ mit
+    $A\stackrel{n}{\simeq}B$ existiert. Also gibt es eine Zerlegung
+    $A=M_{1}\dotcup\dotso \dotcup M_{n}$ und $B'=\phi_{1}(M_{1})\dotcup\dotso
+    \dotcup\phi_{n}(M_{n})$ mit $\phi_{u}\in\FB_{3}$ für $1\leq u\leq n$.
+    Damit können wir $A\stackrel{n}{\simeq}B'$ durch Bijektionen $\phi\colon
+    A\rightarrow B'$ mit $\phi(x)= \phi_{u}(x)$ für $x\in M_{u}$ beschreiben.
+
+    Die können wir auch für $B\stackrel{m}{\leq}A$ machen. Es existiert ein
+    $A'\subseteq A$ mit $A'\stackrel{m}{\simeq}B$, d.\,h. es gibt Zerlegungen
+    $A'=N_{1}\dotcup\dotso \dotcup N_{m}$ und $B=\psi_{1}(N_{1})\dotcup\dotso
+    \dotcup\psi_{m}(N_{m})$ mit $\psi_{v}\in\FB_{3}$ für $1\leq v\leq m$.
+    Damit können wir $A'\stackrel{m}{\simeq}B$ durch Bijektionen $\psi\colon
+    A'\rightarrow B$ mit $\psi(x)=\psi_{v}(x)$ für $x\in N_{v}$ beschreiben.
+
+    Wir setzen $C_{0}\coloneqq A\setminus A'$ und dann induktiv
+    $C_{t+1}\coloneqq \psi^{-1}\phi(C_{t})$ für $t\in\N_{0}$. Weiterhin  ist
+    $C\coloneqq\bigcup_{t=0}^{\infty} C_{t}$. Wegen $C_{t}\subseteq A'$ für
+    $t\geq1$ folgt nach der Definition von $\phi$ und $\psi$, $\psi(A\setminus
+    C)= \psi((A\setminus C_{0})\cap(A\setminus\bigcup_{t=1}^{\infty} C_{t}))=
+    \psi(A'\cap(A\setminus\bigcup_{t=1}^{\infty} C_{t}))=
+    \psi(A'\cap(A'\setminus\bigcup_{t=1}^{\infty} C_{t}))=
+    \psi(A'\setminus\bigcup_{t=1}^{\infty} C_{t})=
+    \psi(A')\setminus\bigcup_{t=1}^{\infty} \psi(C_{t})=
+    B\setminus\bigcup_{t=1}^{\infty} \phi(C_{t-1})=B\setminus\phi(C)$
+
+    Wegen $C\subseteq A$ nach der Definition von $C_{t}$ und $\phi(C)\subseteq
+    B$ hat man die Zerlegungen $A=(A\setminus C)\dotcup C$ und
+    $B=(B\setminus\phi(C))\dotcup\phi(C)$. Die Einschränkungen
+    $\psi|_{A\setminus C}$ und $\phi|_{C}$ sind Bijektionen $\psi|_{A\setminus
+    C}\colon A\setminus C\rightarrow B\setminus\phi(C)$ bzw. $\phi|_{C}\colon
+    C\rightarrow\phi(C)$. Die Abbildung $\psi|_{A\setminus C}$ beschreibt
+    Zerlegungsgleichheit $A\setminus C\stackrel{m}{\simeq} B\setminus\phi(C)$
+    mit Zerlegungsteilen $N_{1}\cap(A\setminus C),\dotsc,N_{m}\cap(A\setminus
+    C)$ und die Abbildung $\phi|_{C}$ beschreibt Zerlegungsgleichheit
+    $C\stackrel{n}{\simeq}\phi(C)$ mti den Zerlegungsteilen $M_{1}\cap
+    C,\dotsc,M_{n}\cap C$.
+
+    Zusammengefasst ergibt sich somit die Behauptung.
+  \end{proof}
 \end{satz}
+
+\begin{bemerk}
+  Der Fall $a=A_{1}+\dotsb+ A_{k}$ und $b=B_{1}+\dotsb+ B_{l}$ ist analog zu
+  behandeln. Die Beschreibung der Bijektionen ist formal komplizierter.
+\end{bemerk}
+
+\subsection{Das Banach-Tarski-Paradoxon in der starken Form}
+%def 8
+\begin{defini}
+  Für eine beschränkte Menge $M\subseteq\R^{3}$ und und Radius $r\geq0$ ist
+  die Kolmogorowsche Entropiefunktion $\CN_{r}(M)$ definiert durch
+  $\CN_{r}(M)\coloneqq\min\{m\in M | M \text{ durch $m$ abgeschlossene Kugeln
+  von Radius $r$ überdeckbar}\}$
+\end{defini}
+
+%satz 8
+\begin{satz}\label{satz:2.8}
+  Seien $a=A_{1}+\dotsb+ A_{k}$ und $b=B_{1}+\dotsb+ B_{l}$ aus
+  $\langle2^{\R^{3}}\rangle$ derart, dass alle Summanden $A_{i}$ von $A$ und
+  $B_{j}$ von $B$ beschränkt sind und je ein Summand von $a$ und von $b$
+  innere Punkte hat. Dann sind $a$ und $b$ zerlegungsgleich
+  ($a\stackrel{*}{\simeq}b$). Sind $r$ und $s$ Radien von abgeschlossenen
+  Inkugeln eines Summanden von $a$ bzw. $b$, so folgt:
+  \begin{gather*}
+    \deg(a,b)\leq3\left(\sum_{i=1}^{k} \CN_{s}(A_{i})+ \sum_{j=1}^{l}
+       \CN_{r}(B_{j})\right)-2
+  \end{gather*}
+  \begin{proof}
+    Sei o.\,B.\,d.\,A. $B(x_{a},r)\subseteq A_{1}$. Nach der Definition von
+    $\CN_{r}(B_{j})$ ist $B_{j}$ durch $\CN_{r}(B_{j})$ Translate von
+    $B(x_{a},r)$ überdeckbar. Somit existiert ein
+    $h=\CN_{r}(B_{1})+\dotsb+\CN_{r}(B_{l})$ Translation $\tau_{v}\in\FB_{3}$
+    mit $1\leq v\leq h$ mit
+    \begin{gather}
+      \label{eq:20}
+	     B_{j}\subseteq\bigcup_{v=\CN_{r}(B_{1})+\dotsb+\CN_{r}(B_{j-1})+1}^{\CN_{r}(B_{1})+\dotsb+\CN_{r}(B_{j})} \tau_{v}(B(x_{a},r))
+    \end{gather}
+
+    Wegen \autoref{satz:2.6} folgt, $B(x_{a},r)\stackrel{3h-1}{\simeq} h\cdot
+    B(x_{a},r)$. Also existiert eine Zerlegung $B(x_{a},r)= M_{1}\dotcup\dotso
+    \dotcup M_{3h-1}$, eine Darstellung $3h-1= r_{1}+\dotsb+ r_{h}$ und
+    Bewegungen $\phi_{u}\in\FB_{3}$ mit $1\leq u\leq3h-1$ mit disjunkter
+    Vereinigung
+    \begin{gather}
+      \label{eq:21}
+	 B(x_{a},r)= \bigcup_{u=r_{1}+\dotsb+ r_{v-1}+1}^{r_{1}+\dotsb+ r_{v}}
+	 \phi_{u}(M_{u}) \qquad1\leq v\leq h
+    \end{gather}
+    Die Kombination von \autoref{eq:20} und \autoref{eq:21} liefert
+    Überdeckungen der folgenden Art:
+    \begin{gather}
+      \label{eq:22}
+	 B_{j}\subseteq\bigcup_{v=\CN_{r}(B_{1})+\dotsb+\CN_{r}(B_{j-1})+1}^{\CN_{r}(B_{1})+\dotsb+\CN_{r}(B_{j})}
+	 \bigcup_{u=r_{1}+\dotsb+ r_{v-1}+1}^{r_{1}+\dotsb+ r_{v}}
+	 \tau_{v}\phi_{u}(M_{u})
+    \end{gather}
+    der Summanden $B_{j}$ durch Bilder der paarweise disjunkten
+    $M_{u}\subseteq A_{1}$ mit $1\leq u\leq3h-1$. Nun hilft uns der
+    \autoref{satz:hs2.3} weiter. Denn daraus folgt, $b\stackrel{3h-1}{\leq}a$
+    mti $h= \sum_{j=1}^{l} \CN_{r}(B_{j})$.
+
+    Analog erhalten wir $a\stackrel{3g-1}{\leq}b$ mti $g=\sum_{i=1}^{k}
+    \CN_{s}(A_{i})$. Der \autoref{satz:2.7} liefert nun
+    $a\stackrel{n}{\simeq}b$ mit $n= (3h-1)+(3g-1)= 3(\sum_{i=1}^{k}
+    \CN_{s}(A_{i})+ \sum_{j=1}^{l} \CN_{r}(B_{j}))-2$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Die analoge Aussage ohne Gradabschätzung für den Fall $a=A,
+  b=B\subseteq\R^{3}$ wird in \cite{wagon} als die starke Form des Paradoxons
+  von Banach"=Tarski bezeichnet.
+\end{bemerk}
+
+%lemma
+\begin{lemma}\label{lem:1}
+  Seien $M\subseteq\R^{3}$ eine beschränkte Menge mit Umkugelradius $R>0$ und
+  $r>0$ ein Radius. Dann gilt
+  \begin{gather*}
+    \CN_{r}(M)<\min\{\left(\sqrt{3}\nicefrac{R}{r}+1\right)^{3},
+       \frac{\sqrt{3}\pi}{2} \left(\frac{R}{r}+2\right)^{3}\}
+  \end{gather*}
+\begin{proof}
+  Sei $B(x_{0},R)$ Umkugel von $M$. Wir überdecken die Umkugel $B(x_{0},R)$
+  durch einen Würfel~$W$ der Kantenlänge $2R$ und wählen eine natürliche Zahl $h$
+  mit $\sqrt{3}\nicefrac{R}{r}\leq h\leq\sqrt{3}\nicefrac{R}{r}+1$. Nun
+  überdecken wir $W$ durch $h^{3}$~Würfel der Kantenlänge~$\nicefrac{2R}{h}$.
+  Jeder Würfel der Kantenlänge~$\nicefrac{2R}{h}$ hat eine Länge der
+  Raumdiagonalen von
+  $\sqrt{3}\nicefrac{2R}{h}\leq\sqrt{3}\frac{2R}{\sqrt{3}\frac{R}{r}}= 2r$.
+  Ist also durch eine Kugel vom Radius~$r$ überdeckbar.
+
+  Insgesamt erhalten wir die Überdeckung
+  $\CN_{r}(M)\leq\CN_{r}(B(x_{0},R))\leq\CN_{r}(W) \leq
+  h^{3}<(\sqrt{3}\nicefrac{R}{r}+1)^{3}$.
+
+  Der $\R^{3}$ wird durch gitterförmig angeordnete, paarweise innerdisjunkte
+  Würfel der Kantenlänge $\frac{2r}{\sqrt{3}}$ mit der Länge der
+  Raumdiagonalen von $2r$ überdeckt. Das $j$ sei die Anzahl der Gitterwürfel,
+  die die Umkugel $B(x_{0},R)$ schneiden. Damit folgt, $\CN_{r}(M)\leq
+  \CN_{r}(B(x_{0},R))\leq j$. Jeder der $j$~Gitterwürfel liegt ganz in der
+  Kugel $B(x_{0},R+2r)$. Somit kommen wir zu der Volumenabschätzung
+  $j\cdot\left(\frac{2r}{\sqrt{3}}\right)^{3}<\vol(B(x_{0},R+2r))=
+  \frac{4\pi}{3}(R+2r)^{3}$. Damit lässt sich das $j$ abschätzen:
+  \begin{align*}
+    \CN_{r}(M) &\leq j<
+       \left(\frac{\sqrt{3}}{2r}\right)^{3}\frac{4\pi}{3}(r+2r)^{3}=
+       \frac{\sqrt{3}\pi}{2}\left(\frac{R}{r}+2\right)^{3}
+  \end{align*}
+\end{proof}
+\end{lemma}
+
+\begin{bemerk}
+  Die Abschätzung in \autoref{lem:1} sind nur vom Quotienten $\nicefrac{R}{r}$
+  abhängig. Für $\nicefrac{R}{r}\leq5,3$ ist $(\sqrt{3}\nicefrac{R}{r}+1)^{3}$
+  besser und für $\nicefrac{R}{r}\geq5,4$ ist
+  $\frac{\sqrt{3}\pi}{2}(\nicefrac{R}{r}+2)^{3}$ besser.
+\end{bemerk}
+
+%folg 3
+\begin{folg}
+  Seien $a,b,r,s$ wie in \autoref{satz:2.8} und sind $R_{1},\dotsc, R_{k}$,
+  $S_{1},\dotsc, S_{l}$ die Umkugelradien der Summanden $A_{1},\dotsc, A_{k}$
+  bzw. $B_{1},\dotsc, B_{l}$, so gilt $a\stackrel{*}{\simeq}b$ mit
+  \begin{align*}
+    \deg(a,b)&\leq3(\sum_{i=1}^{k} \min\{(\sqrt{3}\frac{R_{i}}{s}+1)^{3},
+  \frac{\sqrt{3}\pi}{2} (\frac{R_{i}}{s}+2)^{3}\})\\
+    &\qquad+ \sum_{j=1}^{l}
+  \min\{(\sqrt{3}\frac{S_{j}}{r}+1)^{3},
+  \frac{\sqrt{3}\pi}{2}(\frac{S_{j}}{2}+2)^{3}\})-2
+  \end{align*}
+\end{folg}
+
+\begin{bemerk}
+  \begin{enumerate}[a)]
+   \item Weitere Betrachtungen zu optimalen Teileranzahlen der
+    Zerlegungsgleichheit sind möglich. So können beispielsweise anstelle von
+    Kugeln auch punktierte Kugeln als "`Baustein"' im Sinne von
+    \autoref{satz:2.8} benutzt werden. Für Würfel $W$ kann man zeigen,
+    $2k\leq\deg(W,k\cdot W)\leq8k-3$ für $k\geq2$, speziell $\leq\deg(W,2\cdot
+    W)\leq13$.
+   \item Das Analogon des Paradoxons von Banach"=Tarksi gilt auch im $\R^{d}$
+    für $d\geq4$, aber \emph{nicht} für $d\leq2$.
+  \end{enumerate}
+\end{bemerk}
+
+\chapter{Elementare Zerlegungsgleichheit topologischer Scheiben}
+
+\section{Einführung}
+
+\subsection{Tarskis Frage nach der Quadratur des Kreises}
+
+Das Analogon zum Paradoxon von Banach"=Tarski für die Ebene $\R^{2}$
+funktioniert nicht. Denn es existiert ein $\sigma$-additives, universelles,
+$\FB_{2}$"~invariantes  (bewegunsginvariantes) und normiertes Maß $\mu$ auf
+$2^{\R^{2}}$. Der Mathematiker \textsc{Alfred Tarski} stellte 1925 die Frage,
+ob eine Kreisfläche $K\subseteq\R^{2}$  und ein dazu flächengleiches Quadrat
+$Q\subseteq\R^{2}$ disjunkt zerlegungsgleich bezüglich der euklidischen
+Bewegungsgruppe $\FB_{2}$ des $\R^{2}$ sind. \textsc{Miklós Laczkovich}
+beantwortete die Frage in \cite{lacz}. Der Beweis ist sehr schwierig und in
+der Mathematik eine Sensation. Er verwendete sehr viele Zerlegungsteile. Eine
+offene Frage ist, ob diese Quadratur des Kreises mit Lebesgue"=messbaren oder
+Borel"=messbaren Zerlegungsteilen möglich ist. Hier betrachten wir einen
+elementaren Zugang.
+
 
 \clearpage
 \appendix
@@ -2985,6 +3196,11 @@ Dies geht auf \cite{groot56} zurück.
  \bibitem{groot56} \textsc{J. de Groot}: Orthogonal isomorphic representations
   of free groups. Canadian Journal of Mathematic 8.
   1956. 256--262
+ \bibitem{wagon} \textsc{Stanley Wagon}: The Banach"=Tarski"=paradox.
+  Cambridge University Press, 1994.
+ \bibitem{lacz} \textsc{Miklós Laczkovich}: Equidecomposability and
+  discrepancy: a solution to Tarski's circle squaring problem. Journal für die
+  Reine und Angewandte Mathematik, Bd. 404, 1990, S.\,77--117.
 \end{thebibliography}
 
 % \clearpage
