--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -952,15 +952,23 @@
     \highl{Matrixring} des Grades~$n$ über $R$. Das Nullelement ist die
     \highl{Nullmatrix} $0_{n}$ und das Einselement $1_{n}$.
    \item Sei $(R_{i})_{i\in I}$ eine nichtleere Familie von Ringen. Dann
-    erhält man das \highl[Produkt!direktes]{direkte Produkt} $\bigtimes_{i\in
-    I} R_{i}\coloneqq\prod_{i\in I} R_{i}\coloneqq\Set{(r_{i})_{i\in I} |
-    r_{i}\in R_{i}, i\in I}$ mit $(r_{i})_{i\in I}+(s_{i})_{i\in I}\coloneqq
+    erhält man das \highl[Produkt!direktes]{direkte Produkt}
+    \begin{gather*}
+      \bigtimes_{i\in I} R_{i}\coloneqq\prod_{i\in I}
+	 R_{i}\coloneqq\Set{(r_{i})_{i\in I} | r_{i}\in R_{i}, i\in I}
+    \end{gather*}
+    mit $(r_{i})_{i\in I}+(s_{i})_{i\in I}\coloneqq
     (r_{i}+s_{i})_{i\in I}$. Der Spezialfall $R_{i}=R$ für alle $i$ ergibt
-    $\bigtimes_{i\in I} R_{i}= \Abb(I,R)= \Set{f\colon I\rightarrow R | f
-    \text{ Abbildung}}$ mit $(f+g)(x)\coloneqq f(x)+g(x)$ für $x\in I$ und für
-    den Spezialfall $I=\{1,\dotsc,n\}$ ergibt sich das direkte Produkt durch $\bigtimes_{i\in I} R_{i}=
-    R_{1}\times\dotso \times R_{n}= \Set{(r_{1},\dotsc, r_{n} | r_{1}\in
-    R_{1},\dotsc, r_{n}\in R_{n}})$.
+    \begin{gather*}
+      \bigtimes_{i\in I} R_{i}= \Abb(I,R)= \Set{f\colon I\rightarrow R | f
+	 \text{ Abbildung}}
+    \end{gather*}
+    mit $(f+g)(x)\coloneqq f(x)+g(x)$ für $x\in I$ und für
+    den Spezialfall $I=\{1,\dotsc,n\}$ ergibt sich das direkte Produkt durch
+    \begin{gather*}
+      \bigtimes_{i\in I} R_{i}= R_{1}\times\dotso \times R_{n}=
+	 \Set{(r_{1},\dotsc, r_{n}) | r_{1}\in R_{1},\dotsc, r_{n}\in R_{n}}
+    \end{gather*}
    \item Sei $R$ ein Ring und $M$ ein Monoid. Dann ergibt sich der
     \highl{Monoidring} von $M$ über $R$ durch $RM\coloneqq\Set{(r_{m})_{m\in
     M} | r_{m}\in R, m\in M, r_{m}=0 \text{ für fast alle } m\in M}$. Die
