Das Modul war ein Ideal.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3379 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -1600,7 +1600,7 @@ Sei $R$ ein Ring.
     $R$"~Linksmoduls~$R$, d.\,h. $L\subseteq R$, $0\in L$ und $rx+sy\in L$ für
     $r,s\in R$ und $x,y\in L$. Analog definiert man das \highl{Rechtsideal}.
     Für $I\subseteq R$ gilt also, $I\trianglelefteq R\Leftrightarrow I$ Links-
-    und Rechtsmodul\help{Modul oder Ideal?} ist.
+    und Rechtsideal in $R$ ist.
    \item Sei $M$ ein $R$"~Modul. Dann sind $0\coloneqq\{0\}$ und $R$
     Untermoduln. Man bezeichnet $0$ als den
     \highl[Untermodul!trivialer]{trivialen Untermodul} und $N\subseteq M$ mit
