Bemerkung mit der Bijektion ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3386 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2638,6 +2638,32 @@ Sei $R$ ein Ring.
   \end{proof}
 \end{satz}
 
+\begin{bemerk}
+  Zunächst zeigen wir, dass für jede unendliche Menge $X$ eine Bijektion
+  $X\times\N\rightarrow X$ existiert. Dies ist bekanntlich richtig, falls $X$
+  abzählbar ist. Im allgemeinen Fall ist
+  \begin{gather*}
+    F\coloneqq\Set{f\colon Y\times\N\rightarrow Y | Y\subseteq X, f\text{
+       bijektiv}}
+  \end{gather*}
+  nichtleer, da $X$ eine abzählbare Teilmenge enthält. Wir definieren auf $F$
+  eine Ordnung $\geq$ durch: $f\leq g\Leftrightarrow g$ Fortsetzung von $f$.
+  Es ist leicht zu sehen, dass jede total geordnete Teilmenge von $F$ eine
+  obere Schranke besitzt. Nach dem Lemma von \textsc{Zorn} enthält $F$ ein
+  maximales Element $g\colon Z\times\N\rightarrow Z$. Falls $Z=X$ sind wir
+  fertig. Also nehmen wir an, dass $Z\neq X$.
+  \begin{enumerate}[1.\,F{a}ll]
+   \item $\abs{X\setminus Z}=\infty$: Dann existiert eine abzählbare Teilmenge
+    $Z'$ von $X\setminus Z$ und eine Bijektion $g'\colon Z'\times\N\rightarrow
+    Z'$. Daher kann man $g$ zu einer Bijektion $(Z\cup Z')\times\N\rightarrow
+    Z\cup Z'$ fortsetzen. Dies steht im Widerspruch zur Maximalität von $g$.
+   \item $0<\abs{X\setminus Z}<\infty$: Dann existiert eine Bijektion $h\colon
+    Z\rightarrow X$. Diese induziert eine Bijektion $h'\colon
+    Z\times\N\rightarrow X\times\N$. Wir erhalten insgesamt eine Bijektion
+    $X\times\N\xrightarrow{h'^{-1}}
+    Z\times\N\xrightarrow{g}Z\xrightarrow{h}X$.
+  \end{enumerate}
+\end{bemerk}
 
 \todo[inline]{Fehlende Vorlesungen einbauen}
 
