Fehlende Kapitelüberschriften eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@3392 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3202,6 +3202,10 @@ Sei $R$ ein Ring.
 
 \todo[inline]{fehlende Vorlesungen einbauen}
 
+\chapter{Injektive Hüllen und projektive Decken}
+
+\chapter{Semiperfekte Ringe und Idempotente}
+
 %Vorlesung vom 16.6.2011
 %satz 12.5
 \begin{satz}\label{satz:12.5}
