Definition eines injektiven Moduls
git-svn-id: https://svn.lug-jena.de/uni-skripte@3396 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3288,7 +3288,27 @@ Sei $R$ ein Ring.
   \end{enumerate}
 \end{bemerk}
 
+%Vorlesung vom 3.6.2011
 \chapter{Injektive Moduln}
+
+Sei $R$ ein Ring.
+
+%satz 10.1
+\begin{satz}
+  Für $Q\in\vorunten{R}\kat{Mod}$ sind äquivalent:
+  \begin{enumerate}
+   \item Zu jedem $R$"~Monomorphismus $f\colon M\rightarrow N$  und jedem
+    $g\in\Hom_{R}(M,Q)$ existiert ein $h\in\Hom_{R}(N,Q)$ mit $g=h\circ f$.
+   \item Zu jedem Linksideal $L\subseteq R$ und $g\in\Hom_{R}(L,Q)$ existiert
+    ein $h\in\Hom_{R}(R,Q)$ mit $h|L=g$.
+   \item Zu jedem Linksideal $L\subseteq R$ und jedem $g\in\Hom_{R}(L,Q)$
+    existiert ein $x\in Q$ mit $g(a)=ax$ für $a\in L$.
+  \end{enumerate}
+\end{satz}
+
+\begin{defini}
+  Gegebenenfalls heißt $Q$ \highl[Modul!injektives]{injektiv}\index{injektiv}.
+\end{defini}
 
 \todo[inline]{fehlende Vorlesungen einbauen}
 
