--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2979,7 +2979,7 @@ Sei $R$ ein Ring.
   \vorunten{R}\kat{Mod}\rightarrow\kat{Ab}$.
 \end{bemerk}
 
-\begin{satz}
+\begin{satz}\label{satz:9.6}
   \begin{enumerate}
    \item Für $P\in\vorunten{R}\kat{Mod}$ und jede kurze exakte Folge
     \begin{gather}
@@ -3294,7 +3294,7 @@ Sei $R$ ein Ring.
 Sei $R$ ein Ring.
 
 %satz 10.1
-\begin{satz}
+\begin{satz}\label{satz:10.1}
   Für $Q\in\vorunten{R}\kat{Mod}$ sind äquivalent:
   \begin{enumerate}
    \item Zu jedem $R$"~Monomorphismus $f\colon M\rightarrow N$  und jedem
@@ -3304,13 +3304,212 @@ Sei $R$ ein Ring.
    \item Zu jedem Linksideal $L\subseteq R$ und jedem $g\in\Hom_{R}(L,Q)$
     existiert ein $x\in Q$ mit $g(a)=ax$ für $a\in L$.
   \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item [(i)$\Rightarrow$(ii)] Der Punkt (ii) ist nur ein Spezialfall von
+      (i).
+     \item [(ii)$\Rightarrow$(iii)] Sei (ii) erfüllt, $L\subseteq R$ ein
+      Linksideal und $g\in\Hom_{R}(L,Q)$. Dann existiert ein
+      $h\in\Hom_{R}(R,Q)$ mit $h|L=g$. Sei $x\coloneqq h(1)\in Q$. Dann:
+      $g(a)=h(a) =h(a\cdot1)= ah(1)=ax$ für $a\in L$.
+     \item [(iii)$\Rightarrow$(i)] Sei (iii) erfüllt, $f\colon M\rightarrow N$
+      ein $R$"~Monomorphismus und $g\in\Hom_{R}(M,Q)$. Sei $\FM$ die Menge
+      aller Paare $(L,l)$, wobei $L\subseteq N$ ein Untermodul mit
+      $f(M)\subseteq L$ und $l\colon\Hom_{R}(L,Q)$ mit $l\circ f=g$ ist. Wegen
+      $(f(M), g\circ f^{-1}|f(M))\in\FM$ ist $\FM\neq\emptyset$. Ferner ist
+      $\FM$ geordnet durch: $(L,l)\leq(L',l')\colon\Leftrightarrow L\subseteq
+      L'$ und $l'|L=l$. Man zeigt leicht, dass jede total geordnete Teilmenge
+      von $\FM$ eine obere Schranke in $\FM$ hat. Nach dem Lemma von
+      \textsc{Zorn} existiert ein maximales Element $(Z,z)$ in $\FM$. Im Fall
+      $Z=N$ sind wir fertig. Sei also $Z\neq N$ und $y\in N\setminus Z$. Dann
+      ist $I=\Set{a\in R | ay\in Z}\leq R$ ein Linksideal und $\gamma\colon
+      I\rightarrow Q$ mit $a\mapsto z(ay)$ eine $R$"~lineare Abbildung. Wegen (iii) existiert ein
+      $x\in Q$ mit $\gamma(a)=ax$ für $a\in I$. Sei $Z'\coloneqq Z+Ry$ mit
+      $z'\colon Z'\rightarrow Q$. Das ist wohldefiniert, denn sind $a$ und
+      $a'$ aus $Z$ sowie $r$ und $r'$ aus $R$ mit $a+ry=a'+r'y$, so ist
+      $(r-r')y= a'-a\in Z$. Also ist $r-r'\in I$ und $z(a-a')= z((r-r')y)=
+      \gamma(r-r')= (r-r')x$, d.\,h. $z(a)+rx= z(a')+r'x$.  Man zeigt leicht,
+      dass $z'$ eine $R$"~lineare Abbildung und $z'|Z=z$ ist. Daher ist
+      $(Z,z)<(Z',z')\in\FM$\lightning{}
+    \end{itemize}
+  \end{proof}
 \end{satz}
 
 \begin{defini}
   Gegebenenfalls heißt $Q$ \highl[Modul!injektives]{injektiv}\index{injektiv}.
 \end{defini}
 
-\todo[inline]{fehlende Vorlesungen einbauen}
+%satz 10.2
+\begin{satz}\label{satz:10.2}
+  Für jede Familie $(Q_{i})_{i\in I}$ von $R$"~Moduln gilt:
+  \begin{gather*}
+    \prod_{i\in I} Q_{i} \text{ ist injektiv } \Leftrightarrow Q_{i} \text{
+       ist injektiv für } i\in I
+  \end{gather*}
+  \begin{proof}
+    Sei $Q\coloneqq\prod_{i\in I}Q_{i}$ mit Projektoren $p_{j}$ und Injektoren
+    $q_{j}$ und $f\colon M\rightarrow N$ ein $R$"~Monomorphismus.
+    \begin{itemize}
+     \item ["`$\Rightarrow$"'] Sei $Q$ injektiv, $j\in I$ und
+      $g\in\Hom_{R}(M,Q_{j})$. Dann existiert zu $q_{j}\circ
+      g\in\Hom_{R}(M,Q)$ ein $k\in\Hom_{R}(N,Q)$ mit $q_{j}\circ g= k\circ f$.
+      Daher $h\coloneqq p_{j}\circ k\in\Hom_{R}(N,Q)$ und $h\circ f=
+      p_{j}\circ k\circ f=p_{j}\circ q_{j}\circ g=g$.
+     \item ["`$\Leftarrow$"'] Sei $g\in\Hom_{R}(M,Q)$. Für $i\in I$ sei
+      $Q_{i}$ injektiv: Dann existiert zu $p_{i}\circ g\in\Hom_{R}(M,Q_{i})$
+      ein $h_{i}\in\Hom_{R}(N,Q_{i})$ mit $h_{i}\circ f= p_{i}\circ g$. Daher:
+      $h\colon N\rightarrow Q$ mit $x\mapsto(h_{i}(x))_{i\in I}$ eine
+      $R$"~lineare Abbildung und $h(f(x))= (h_{i}(f(x)))_{i\in I}=
+      (p_{i}(g(x)))_{i\in I}= g(x)$ für $x\in M$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+% satz 10.3
+\begin{satz}
+  Ein $\Z$"~Modul $A$ ist genau dann injektiv, wenn fü r $n\in\N$ und $a\in A$
+  ein $b\in A$ mit $a=nb$ existiert.
+  \begin{proof}
+    \begin{itemize}
+     \item ["`$\Rightarrow$"'] Sei $A$ injektiv, $a\in A$ und $n\in\N$. Dann ist
+      $g\colon\Z n\rightarrow A$ mit $zn\mapsto za$ eine $\Z$"~lineare
+      Abbildung. Nach dem \autoref{satz:10.1} existiert ein $b\in A$ mit
+      $g(x)= xb$ für $x\in\Z n$. Insbesondere $a= g(n)= nb$.
+     \item ["`$\Leftarrow$"'] Sei $A$ dividierbar, $I\trianglelefteq\Z$ und
+      $g\in\Hom_{R}(I,A)$. Sei \OE{} $I\neq0$, d.\,h. $I=\Z n$ für ein
+      $n\in\N$. Zu $a\coloneqq g(n)\in A$ existiert dann ein $b\in A$ mit
+      $a=nb$. Folglich: $g(zn)= zg(n)= za=znb$ für $z\in\Z$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Injektive $\Z$"~Moduln nennt man daher auch \highl[Gruppe!dividierbare
+  abelsche]{dividierbare abelsche Gruppen}.
+\end{bemerk}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item $\Q$ ist ein injektiver $\Z$"~Modul, $\Z$ selbst nicht.
+   \item Jeder Faktormodul eines injektiven $\Z$"~Moduls ist wieder injektiv.
+   \item Koprodukte eines injektiven $\Z$"~Moduls sind wieder injektiv.
+  \end{enumerate}
+\end{bsp}
+
+%satz 10.4
+\begin{satz}\label{satz:10.4}
+  Jeder $\Z$"~Modul $M$ ist zu einem Untermodul eines injektiven $\Z$"~Moduls
+  isomorph.
+  \begin{proof}
+    $M$ ist zu einem Faktormodul eines freien $\Z$"~Moduls isomorph. Daher
+    existiert eine Menge $I$ und ein Untermodul $U\subseteq
+    F\coloneqq\coprod_{i\in I} \Z$ mit $M\simeq F/U=(\coprod_{i\in
+    I}\Z)/U\subseteq (\coprod_{i\in I} \Q)/U$ injektiv. 
+  \end{proof}
+\end{satz}
+
+% bem 10.5
+\begin{bemerk}
+  Für $A\in\vorunten{\Z}\kat{Mod}$ ist
+  $\Hom_{\Z}(R,A)\in\vorunten{\Z}\kat{Mod}$, wobei $(rf)(x)\coloneqq f(xr)$
+  für $r,x\in R$ und $f\in\Hom_{\Z}(R,A)$. 
+\end{bemerk}
+
+\begin{satz}
+  Sei $A\in\vorunten{\Z}\kat{Mod}$ injektiv. Dann ist
+  $\Hom_{\Z}(R,A)\in\vorunten{R}\kat{Mod}$ injektiv.
+  \begin{proof}
+    Sei $f\colon M\rightarrow N$ ein $R$"~Monomorphismus und $g\colon
+    M\rightarrow\Hom_{\Z}(R,A)$ eine $R$"~lineare Abbildung. Dann ist
+    $\gamma\colon M\rightarrow A$ mit $m\mapsto(g(m))(1)$ eine $\Z$"~lineare
+    Abbildung. Da $A$ injektiv ist, existiert ein $\delta\in\Hom_{\Z}(N,A)$
+    mit $\delta\circ f=g$\todo{g oder $\gamma$}.
+
+    Für $x\in N$ ist $h_{x}\colon R\rightarrow A$ mit $r\mapsto\delta(rx)$
+    eine $\Z$"~lineare Abbildung, d.\,h. $h_{x}\in\Hom_{\Z}(R,A)$. Für $a,r\in
+    R$ ist dabei $(ah_{x})(r)= h_{x}(ra)= \delta(rax)= h_{ax}(r)$, d.\,h.
+    $ah_{x}= h_{ax}$. Daraus folgt leicht, dass  $h\colon
+    N\rightarrow\Hom_{\Z}(R,A)$ mit $x\mapsto h_{x}$ eine $R$"~lineare
+    Abbildung ist. Für  $m\in M$ und $r\in R$ ist:
+    \begin{align*}
+      h_{f(m)}(r) &= \delta(rf(m))= \delta(f(rm))= \gamma(rm)= (g(rm))(1)\\
+      &= (rg(m))(1)= (g(m))(1r)= )g(m))(1),
+    \end{align*}
+    d.\,h. $g(m)= h_{f(m)}=h(f(m))$, also $g=h\circ f$.
+  \end{proof}
+\end{satz}
+
+%bem 10.6
+\begin{bemerk}
+  Für $M\in\vorunten{R}\kat{Mod}$ ist $\Hom_{R}(R,M)\subseteq\Hom_{\Z}(R,M)$
+  ein $R$"~Untermodul, denn für $r\in R$ und $f\in\Hom_{R}(R,M)$ ist auch
+  $rf\in\Hom_{R}(R,M)$ wegen $(rf)(ab)= f(abr)=af(br)= a(rf)(b)$ für $a,b\in
+  R$. Ferner ist $\Hom_{R}(R,M)\rightarrow M$ mit $f\mapsto f(1)$ ein
+  $R$"~Isomorphismus.
+\end{bemerk}
+
+\begin{satz}\label{satz:10.6}
+  Jeder $R$"~Modul $M$ ist zu einem Untermodul eines injektiven $R$"~Moduls
+  isomorph.
+  \begin{proof}
+    Nach dem \autoref{satz:10.4} ist der $\Z$"~Modul $U$ Untermodul eines
+    injektiven $\Z$"~Moduls $Q$. Man kann $\Hom_{\Z}(R,M)$ als $R$"~Untermodul
+    des injektiven $R$"~Moduls $\Hom_{\Z}(R,Q)$ auffassen. Dann:
+    $M\simeq\Hom_{R}(R,M)\subseteq\Hom_{\Z}(R,M)\subseteq\Hom_{\Z}(R,Q)$.
+  \end{proof}
+\end{satz}
+
+%satz 10.7
+\begin{satz}
+  $Q\in\vorunten{R}\kat{Mod}$ ist genau dann injektiv, wenn jede kurze exakte
+  Folge der Form $0\rightarrow Q\xrightarrow{f}M\xrightarrow{g}N\rightarrow0$
+  in $\vorunten{R}\kat{Mod}$ zerfällt.
+  \begin{proof}
+    \begin{itemize}
+     \item ["`$\Rightarrow$"'] wie in \autoref{satz:9.6}
+     \item ["`$\Leftarrow$"'] Nach dem \autoref{satz:10.6} existiert ein
+      injektiver $R$"~Modul $D\supseteq Q$. Nach der Voraussetzung zerfällt
+      die kurze exakte Sequenz $0\rightarrow Q\hookrightarrow D\rightarrow
+      D/Q\rightarrow0$. Daher ist $Q\simeq Q\times(D/Q)$. Nach dem
+      \autoref{satz:10.2} ist mit $D$ auch $Q$ injektiv.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+%satz 10.8
+\begin{satz}
+  \begin{enumerate}
+   \item Für $q\in\vorunten{R}\kat{Mod}$ und jede kurze exakte Folge in
+    $\vorunten{R}\kat{Mod}$ $0\rightarrow
+    L\xrightarrow{f}M\xrightarrow{g}N\rightarrow0$ ist die folgende Sequenz in
+    $\vorunten{\Z}\kat{Mod}$ exakt:
+    \begin{gather*}
+      0\rightarrow\Hom_{R}(N,Q)\xrightarrow{\Hom_{R}(g,Q)}
+	 \Hom_{R}(M,Q)\xrightarrow{\Hom_{R}(f,Q)} \Hom_{R}(L,Q)
+    \end{gather*}
+   \item $Q\in\vorunten{R}\kat{Mod}$ ist genau dann injektiv, wenn für jede
+    kurze exakte Folge in $\vorunten{R}\kat{Mod}$ die folgende Sequenz in
+    $\vorunten{\Z}\kat{Mod}$ exakt ist:
+    \begin{gather*}
+      0\rightarrow\Hom_{R}(N,Q)\xrightarrow{\Hom_{R}(g,Q)}
+	 \Hom_{R}(M,Q)\xrightarrow{\Hom_{R}(f,Q)} \Hom_{R}(L,Q)\rightarrow0
+    \end{gather*}
+  \end{enumerate}
+\end{satz}
+
+%def 10.9
+\begin{defini}
+  Sei $M\in\vorunten{R}\kat{Mod}$ und $L\subseteq M$ ein Untermodul. Dann
+  heißt $L$ \highl[Untermodul!wesentliches]{wesentlich}\index{wesentlich} in
+  $M$, wenn $L\cap U\neq0$ für jeden Untermodul $0\neq U\subseteq M$ gilt.
+  Gegebenenfalls nennt man $M$ eine
+  \highl[Erweiterung!wesentliche]{wesentliche Erweiterung} von $L$. Existiert
+  außerdem keine wesentliche Erweiterung $N$ von $L$ mit $M\subset N$, so
+  heißt $M$ \highl[Erweiterung!maximal wesentliche]{maximal wesentliche
+  Erweiterung} von $L$.
+\end{defini}
+
+\todo[inline]{fehlende Vorlesungen vom 6. und 9.\,6.2011 einbauen}
 
 \chapter{Injektive Hüllen und projektive Decken}
 
